# exeinfo

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  exeinfo.cpp  exeinfo.h  messagebox.cpp  messagebox.h  resource.h  resource.rc  winmain.cpp
